--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,33 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Ces</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <base href="/">
+    <title>Angular-Cesium demo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+    <link rel="icon" href="./demo/favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root>
+    <div class="splash-screen">
+        <img src="assets/angular_cesium.png" class="logo">
+        <div class="loader-wrap">
+            <div id="fountainTextG" style="display: flex; justify-content: center">
+                <div id="fountainTextG_1" class="fountainTextG">L</div>
+                <div id="fountainTextG_2" class="fountainTextG">o</div>
+                <div id="fountainTextG_3" class="fountainTextG">a</div>
+                <div id="fountainTextG_4" class="fountainTextG">d</div>
+                <div id="fountainTextG_5" class="fountainTextG">i</div>
+                <div id="fountainTextG_6" class="fountainTextG">n</div>
+                <div id="fountainTextG_7" class="fountainTextG">g</div>
+                <div id="fountainTextG_8" class="fountainTextG">.</div>
+                <div id="fountainTextG_9" class="fountainTextG">.</div>
+                <div id="fountainTextG_10" class="fountainTextG">.</div>
+            </div>
+        </div>
+    </div>
+</app-root>
 </body>
 </html>
